add var env for 3d enable

--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
@@ -1,7 +1,7 @@
 <div class="buttons">
 		<button class="small-icon-button"
 				[attr.tooltip-value]="'Reset zoom' | translate"
-				tooltip-class="'bottom left'"
+				tooltip-class="'left'"
 		(click)="resetZoom()">
 			1:1
 		</button>
@@ -9,7 +9,7 @@
 <div class="buttons">
 	<button class="small-icon-button"
 			[attr.tooltip-value]="'Zoom in' | translate"
-			tooltip-class="'bottom left'"
+			tooltip-class="'left'"
 	(click)="zoomIn()">
 		+
 	</button>
@@ -18,7 +18,7 @@
 <div class="buttons">
 	<button class="small-icon-button"
 			[attr.tooltip-value]="'Zoom out' | translate"
-			tooltip-class="'bottom left'"
+			tooltip-class="'left'"
 	(click)="zoomOut()">
 		-
 	</button>
