--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -336,7 +336,7 @@
     },
 	 "httpTimeout": "3000",
 	 "isFooterCollapsible": {{ getv "/ansyn/iscollapsible" "false" }},
-	 "enable3D": true
+	 "enable3D": {{ getv "/ansyn/3d/enable" "true" }}
   },
   "olConfig": {
   	 "needToUseLayerExtent": false,
