--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
@@ -11,8 +11,9 @@
 	height: 97px;
 	padding: 12px;
 	flex-direction: column;
-	bottom: 35px;
+	top: 0;
 	right: 0;
+	transform: translate(0, calc(~'-100%'));
 }
 
 .time-row {
