--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -4,9 +4,10 @@
 
 :host {
 	position: absolute;
-	bottom: 35px;
+	top: 0;
 	left: 0;
 	min-width: 170px;
+	transform: translateY(calc(~'-100%'));
 
 	/deep/ .treeview-container .row-item {
 		display: flex;
