--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -13,7 +13,7 @@
 			<span class="render">{{ dataInputFiltersTitle | translate}}</span>
 		</button>
 
-		<ansyn-tree-view [@fade]
+		<ansyn-tree-view
 						 *ngIf="dataInputFilterExpand"
 						 (ansynClickOutside)="toggleDataInputFilterIcon()"
 						 [trigger]="trigger.optionsTrigger.nativeElement"
@@ -104,7 +104,6 @@
 		</div>
 
 		<ansyn-timeline-timepicker
-			[@fade]
 			*ngIf="timeSelectionEditIcon"
 			(ansynClickOutside)="toggleTimelineStartEndSearch($event)"
 			[trigger]="timePickerTrigger"
