--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
@@ -12,7 +12,8 @@
 		position: relative;
 		display: flex;
 		height: 100%;
-		border-left: 1px solid @background-color-11;
+		padding: 0 2px;
+		border-left: 1px solid @background-color-8;
 		span {
 			margin-left: 5px;
 			line-height: 23px;
