--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -296,7 +296,7 @@
     ],
     "ShadowMouse": {
     	"activeByDefault": {{ getv "/ansyn/is/shadow/active" "false"}},
-    	"alwaysSendPosition": {{ getv "/ansyn/always/send/position" "false"}}
+    	"forceSendShadowMousePosition": {{ getv "/ansyn/force/send/shadow/mouse/position" "false"}}
     }
   },
   "loggerConfig": {
