--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
@@ -8,17 +8,20 @@
 	display: flex;
 	background: @background-color-0;
 	width: 230px;
-	height: 97px;
-	padding: 12px;
 	flex-direction: column;
 	top: 0;
-	right: 0;
 	transform: translate(0, calc(~'-100%'));
+
+	hr{
+		width: 100%;
+		margin: 0;
+	}
 }
 
 .time-row {
 	display: flex;
 	align-items: center;
+	padding: 6px;
 	margin: 6px 0;
 	span {
 		color: white;
@@ -34,11 +37,9 @@
 		position: relative;
 		width: 155px;
 		height: 22px;
-		padding: 0 10px;
 		display: flex;
 		justify-content: space-around;
 		align-items: center;
-		background: white;
 		font-size: 12px;
 		color: white;
 		.icon-status-bar-time {
@@ -50,24 +51,19 @@
 		color: white;
 		width: 100%;
 		border: none;
-		padding: 0 10px;
 		left: 0;
 		box-sizing: border-box;
 		margin: 0;
-		position: absolute;
-		display: inline-block;
 		height: 100%;
 	}
 	i {
 		color: white;
-		position: absolute;
-		right: 10px;
-		top: 5px;
 	}
 }
 
 div.control-buttons {
 	margin-top: 10px;
+	margin-bottom: 5px;
 	display: flex;
 	justify-content: space-between;
 	color: @application-primary-color;
