--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -295,7 +295,8 @@
       }
     ],
     "ShadowMouse": {
-    	"activeByDefault": {{ getv "/ansyn/is/shadow/active" "false"}}
+    	"activeByDefault": {{ getv "/ansyn/is/shadow/active" "false"}},
+    	"forceSendShadowMousePosition": {{ getv "/ansyn/force/send/shadow/mouse/position" "false"}}
     }
   },
   "loggerConfig": {
