icons size and position fix

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.less
@@ -57,6 +57,10 @@
 		&:hover {
 			background-color: @background-color-6;
 		}
+
+		& i{
+			font-size: inherit;
+		}
 	}
 
 	.switch-field input:checked + label {
