--- a/src/app/@ansyn/ansyn/modules/overlays/components/timeline/timeline.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/timeline/timeline.component.less
@@ -1,7 +1,7 @@
 @import "ansyn/less/colors";
 
 circle.active {
-	fill: @background-color-3;
+	fill: @application-secondary-color;
 	stroke: white;
 }
 
