--- a/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-form-page-header/tasks-form-page-header.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-form-page-header/tasks-form-page-header.component.less
@@ -1,3 +1,5 @@
+@import 'ansyn/less/colors';
+
 :host {
 	display: block;
 	position: relative;
@@ -17,7 +19,7 @@ button.back {
 	transition: .2s;
 
 	&:hover {
-		color: yellow;
+		color: @application-contrast-color;
 		right: 18px;
 	}
 
