--- a/src/app/@ansyn/map-facade/components/ansyn-loader/ansyn-loader.component.less
+++ b/src/app/@ansyn/map-facade/components/ansyn-loader/ansyn-loader.component.less
@@ -26,7 +26,7 @@
 	}
 	.loader-1 .loader-outter {
 		position: absolute;
-		border: 4px solid @background-color-3;
+		border: 4px solid @application-primary-color;
 		border-left-color: transparent;
 		border-bottom: 0;
 		width: 100%;
@@ -36,7 +36,7 @@
 	}
 	.loader-1 .loader-inner {
 		position: absolute;
-		border: 4px solid @background-color-3;
+		border: 4px solid @application-contrast-color;
 		border-radius: 50%;
 		width: 40px;
 		height: 40px;
