get all filtered overlays and fix rxjs internal

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -25,6 +25,8 @@
 
 <button (click)="getOverlayData()">Get overlay data</button>
 
+<button (click)="getAllOverlaysData()">Get Timeline overlay's data</button>
+
 <button (click)="setRotation()">Set rotation</button>
 
 <label>collapse footer
