fix angle filter feature

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -428,6 +428,7 @@
     }
   },
   "multipleOverlaysSourceConfig": {
+  "useAngleDebugMode":  {{ getv "/ansyn/angle/debug/mode" "false" }},
 	 "defaultProvider": {
 	 	"inActive": false,
 		"whitelist": [
