--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.less
@@ -10,7 +10,10 @@
 
 :host {
 	position: fixed;
+	outline: none;
 	transform: translate(-@circle-diameter / 2, -@circle-diameter / 2);
+	width: 0;
+	height: 0;
 	z-index: @z-index-context-menu;
 	*{
 		-webkit-box-sizing: border-box;
@@ -21,10 +24,6 @@
 		div.angle-filter{
 			visibility: visible;
 			transition: visibility 200ms;
-			div.circle{
-				width: @circle-diameter;
-				height: @circle-diameter;
-			}
 		}
 	}
 
@@ -36,6 +35,9 @@
 
 		div.circle {
 			display: flex;
+			flex: 1;
+			width: @circle-diameter;
+			height: @circle-diameter;
 			-webkit-border-radius: 100%;
 			-moz-border-radius: 100%;
 			border-radius: 100%;
@@ -56,11 +58,13 @@
 				-moz-border-radius: 100%;
 				border-radius: 100%;
 				z-index: 5;
+
 				i {
 					color: black;
 					font-size: @point-size - 10;
 				}
 			}
+
 			div.arrows {
 				position: relative;
 				top: 0;
@@ -92,8 +96,9 @@
 
 					}
 
-					&.active:before {
+					&.active:before, &:hover {
 						background: @overlays-dots-color-hover;
+						z-index: 2;
 					}
 
 					&:after {
@@ -106,7 +111,7 @@
 						width: 57%;
 						height: 0;
 						padding-bottom: 57%;
-						border-color:  @overlays-dots-color;
+						border-color: @overlays-dots-color;
 						border-width: 1px 0 0 1px;
 						border-style: solid;
 						transform: translate(0, 0) rotate(45deg);
@@ -115,27 +120,30 @@
 						zoom: 2;
 						//background: rgba(0,255,0,.5);
 					}
-					&.active:after {
+
+					&.active:after, &:hover {
 						border-color: @overlays-dots-color-hover;
+						z-index: 2;
 					}
 				}
 			}
 		}
+
 		div.rectangles {
 			display: flex;
 			justify-content: center;
-
+			width: @circle-diameter;
 			button:first-child {
 				transform: rotate(180deg);
 			}
+
 			button {
-				width: 25px;
-				height: 25px;
-				border:1px solid @border-color;
+				width: 30px;
+				height: 30px;
+				border: 1px solid @border-color;
 				background-color: @background-color;
-				margin:5px;
-				padding: 2.5px;
-				i{
+				margin: 5px;
+				i {
 					color: @overlays-dots-color;
 				}
 			}
