--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box-trigger/combo-box-trigger.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box-trigger/combo-box-trigger.component.less
@@ -14,7 +14,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0 6px;
+	padding: 0;
 	cursor: default;
 	white-space: nowrap;
 
