update icons and alerts

--- a/src/app/@ansyn/ansyn/components/overlay-out-of-bounds/overlay-out-of-bounds.component.html
+++ b/src/app/@ansyn/ansyn/components/overlay-out-of-bounds/overlay-out-of-bounds.component.html
@@ -2,5 +2,6 @@
 	[attr.tooltip-value]="'Back to overlay extent' | translate"
 	tooltip-class="top"
 	(click)="backToExtent()">
+	<span class="indicator" [style.background-color]="color"></span>
 	{{'Image is out of bounds' | translate}}
 </button>
