--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/go-to/go-to.component.html
@@ -52,7 +52,7 @@
 		<button ansynButton type="submit" [disabled]="form.invalid || disabled">{{'Go' | translate}}</button>
 		<button [disabled]="disabled" class="pin-location" type="button" (click)="togglePinLocation()"
 				[class.active]="pinLocationMode">
-				<i class="icon-tools-pin"></i>
+				<i class="icon-pin"></i>
 			<span>{{'Pin location' | translate}}</span>
 		</button>
 	</div>
