--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/utm/utm.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/go-to/projections/utm/utm.component.html
@@ -39,7 +39,7 @@
 				   autocomplete="false"/>
 		</div>
 		<div class="utm-copy-to-clipboard" (click)="copyToClipBoard()">
-			<span class="icon-status-bar-share-link"></span>
+			<span class="icon-copy-coords"></span>
 		</div>
 	</ng-template>
 </div>
