--- a/src/app/@ansyn/ansyn/components/overlay-out-of-bounds/overlay-out-of-bounds.component.less
+++ b/src/app/@ansyn/ansyn/components/overlay-out-of-bounds/overlay-out-of-bounds.component.less
@@ -1,6 +1,11 @@
+@import 'ansyn/less/colors';
 :host {
 	button {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 		height: 100%;
+		border-radius: 1px;
 		position: relative;
 		cursor: pointer;
 		border: none;
@@ -9,11 +14,15 @@
 		margin: 0 2.5px;
 		text-overflow: ellipsis;
 		white-space: nowrap;
-		background: #80c5d4;
+		background: @background-color-6;
 		color: white;
 		outline: none;
-		&:hover{
-			background: #3b7c8a;
+
+		span.indicator{
+			width: 10px;
+			height: 10px;
+			border-radius: 100%;
+			margin-right: 2px;
 		}
 	}
 }
