update icons and style

--- a/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
@@ -9,11 +9,8 @@
 	max-width: 33%;
 
 	div {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
 		background: @background-color-6;
-		padding: 0 5px;
+		border-radius: 5px;
 		font-size: 12px;
 		margin: 0 2.5px;
 		overflow: hidden;
@@ -23,8 +20,9 @@
 		span.indicator {
 			width: 10px;
 			height: 10px;
+			display: inline-block;
 			border-radius: 100%;
-			margin-right: 2px;
+			margin: 0 2px;
 		}
 	}
 }
