--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
@@ -5,14 +5,16 @@
 	[style.direction]="'ltr' | translate">
 		<p>{{'Measure Distance' | translate}}</p>
 
-		<button
+		<div class="buttons">
+		<button id="clearBtn"
 			(click)="clearMeasure()">
 			<span class="bold-on-hover">{{'Clear' | translate}}</span>
 		</button>
 
-		<button
+		<button id="doneBtn"
 			(click)="done()">
 			<span class="bold-on-hover">{{'Done' | translate}}</span>
 		</button>
+		</div>
 	</div>
 
