--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -6,7 +6,7 @@
 			#trigger
 			class="combo-box-width"
 			(click)="toggleDataInputFilterIcon()"
-			icon="icon-input_filter"
+			icon="icon-input-filter"
 			[isActive]="dataInputFilterExpand"
 			[attr.tooltip-value]="toolTips.dataInputFilter | translate"
 			tooltip-class="top">
