--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -79,7 +79,7 @@
 	}
 
 	.description {
-		max-width: 29%;
+		max-width: 33%;
 		padding: 0 10px;
 		text-align: center;
 
@@ -115,6 +115,7 @@
 
 	.notifications{
 		padding: 5px;
+		min-width: 33%;
 	}
 }
 
