--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -2,10 +2,10 @@
 .icon-annotation-arrow:before { content: '\e801'; } /* '' */
 .icon-annotation-circle:before { content: '\e802'; } /* '' */
 .icon-annotation-color:before { content: '\e803'; } /* '' */
-.icon-annotation-linestring:before { content: '\e804'; } /* '' */
+.icon-annotation-line:before { content: '\e804'; } /* '' */
 .icon-annotation-point:before { content: '\e805'; } /* '' */
 .icon-annotation-polygon:before { content: '\e806'; } /* '' */
-.icon-annotation-rectangle:before { content: '\e807'; } /* '' */
+.icon-annotation-square:before { content: '\e807'; } /* '' */
 .icon-annotation-weight:before { content: '\e808'; } /* '' */
 .icon-annotations:before { content: '\e809'; } /* '' */
 .icon-automatic-image-processing:before { content: '\e80a'; } /* '' */
@@ -13,16 +13,15 @@
 .icon-close:before { content: '\e80c'; } /* '' */
 .icon-delete:before { content: '\e80d'; } /* '' */
 .icon-edit:before { content: '\e80e'; } /* '' */
-.icon-layer-export:before { content: '\e80f'; } /* '' */
-.icon-favorites_2:before { content: '\e810'; } /* '' */
+.icon-export:before { content: '\e80f'; } /* '' */
+.icon-favorites-active:before { content: '\e810'; } /* '' */
 .icon-favorites:before { content: '\e811'; } /* '' */
 .icon-frame-mode:before { content: '\e812'; } /* '' */
-.icon-layer-import:before { content: '\e813'; } /* '' */
-.icon-input_filter:before { content: '\e814'; } /* '' */
+.icon-import:before { content: '\e813'; } /* '' */
+.icon-input-filter:before { content: '\e814'; } /* '' */
 .icon-layers-hide:before { content: '\e815'; } /* '' */
 .icon-layers-show:before { content: '\e816'; } /* '' */
-.icon-link-copy:before { content: '\e817'; } /* '' */
-.icon-link:before { content: '\e818'; } /* '' */
+.icon-status-bar-share-link:before { content: '\e818'; } /* '' */
 .icon-main-cases:before { content: '\e819'; } /* '' */
 .icon-main-data-layers:before { content: '\e81a'; } /* '' */
 .icon-main-filters:before { content: '\e81b'; } /* '' */
@@ -34,7 +33,7 @@
 .icon-quick-loop:before { content: '\e821'; } /* '' */
 .icon-remove-overlay:before { content: '\e822'; } /* '' */
 .icon-main-algorithms:before { content: '\e823'; } /* '' */
-.icon-copy-coords:before { content: '\e824'; } /* '' */
+.icon-copy:before { content: '\e824'; } /* '' */
 .icon-shadow-mouse:before { content: '\e829'; } /* '' */
 .icon-share:before { content: '\e82a'; } /* '' */
 .icon-status-bar-case:before { content: '\e82b'; } /* '' */
@@ -53,12 +52,12 @@
 .icon-restore-overlay:before { content: '\e838'; } /* '' */
 .icon-export-maps:before { content: '\e839'; } /* '' */
 .icon-pin-point:before { content: '\e83a'; } /* '' */
-.icon-first:before { content: '\e83b'; } /* '' */
-.icon-angle:before { content: '\e83c'; } /* '' */
-.icon-prev:before { content: '\e83d'; } /* '' */
-.icon-best:before { content: '\e83e'; } /* '' */
-.icon-next:before { content: '\e83f'; } /* '' */
-.icon-last:before { content: '\e840'; } /* '' */
+.icon-context-first:before { content: '\e83b'; } /* '' */
+.icon-context-angle:before { content: '\e83c'; } /* '' */
+.icon-context-prev:before { content: '\e83d'; } /* '' */
+.icon-context-best:before { content: '\e83e'; } /* '' */
+.icon-context-next:before { content: '\e83f'; } /* '' */
+.icon-context-last:before { content: '\e840'; } /* '' */
 .icon-screen-3:before { content: '\e841'; } /* '' */
 .icon-screen-6:before { content: '\e842'; } /* '' */
 .icon-screen-5:before { content: '\e843'; } /* '' */
@@ -67,3 +66,4 @@
 .icon-screen-1:before { content: '\e846'; } /* '' */
 .icon-drag:before { content: '\e847'; } /* '' */
 .icon-main-settings:before { content: '\e848'; } /* '' */
+.icon-status-bar-orientation:before { content: '\e90d'; } /* '' */
