--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.less
@@ -1,28 +1,46 @@
+@import 'ansyn/less/colors';
+
 :host {
 	position: absolute;
-	width: 200px;
+	width: 150px;
 	top: 10px;
 	right: 120px;
-	z-index: 3;
-	background-color: white;
+	z-index: 2;
+	background-color: @background-color-1;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	color: black;
+	color: @background-color-12;
 
 	.measure {
 		padding: 5px 15px;
 	}
 
-	button {
-		border: none;
-		background-color: inherit;
 
-		.bold-on-hover:hover {
-			font-weight: bold;
+	.buttons {
+		display: flex;
+		justify-content: flex-end;
+		button {
+			border: none;
+			background-color: inherit;
+
+			&#clearBtn {
+				color: #9e9e9e;
+			}
+
+			&#doneBtn {
+				color: @application-primary-color;
+
+				&:hover {
+					background-color: @background-color-6;
+				}
+			}
+
+			.bold-on-hover:hover {
+				font-weight: bold;
+			}
 		}
 	}
-
 
 
 }
