menu and context menu

--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -1,11 +1,11 @@
-.icon-add:before { content: '\e800'; } /* '' */
+.icon-layer-add:before { content: '\e800'; } /* '' */
 .icon-annotation-arrow:before { content: '\e801'; } /* '' */
 .icon-annotation-circle:before { content: '\e802'; } /* '' */
 .icon-annotation-color:before { content: '\e803'; } /* '' */
-.icon-annotation-line:before { content: '\e804'; } /* '' */
+.icon-annotation-linestring:before { content: '\e804'; } /* '' */
 .icon-annotation-point:before { content: '\e805'; } /* '' */
 .icon-annotation-polygon:before { content: '\e806'; } /* '' */
-.icon-annotation-square:before { content: '\e807'; } /* '' */
+.icon-annotation-rectangle:before { content: '\e807'; } /* '' */
 .icon-annotation-weight:before { content: '\e808'; } /* '' */
 .icon-annotations:before { content: '\e809'; } /* '' */
 .icon-automatic-image-processing:before { content: '\e80a'; } /* '' */
@@ -13,11 +13,11 @@
 .icon-close:before { content: '\e80c'; } /* '' */
 .icon-delete:before { content: '\e80d'; } /* '' */
 .icon-edit:before { content: '\e80e'; } /* '' */
-.icon-export:before { content: '\e80f'; } /* '' */
+.icon-layer-export:before { content: '\e80f'; } /* '' */
 .icon-favorites-active:before { content: '\e810'; } /* '' */
 .icon-favorites:before { content: '\e811'; } /* '' */
 .icon-frame-mode:before { content: '\e812'; } /* '' */
-.icon-import:before { content: '\e813'; } /* '' */
+.icon-layer-import:before { content: '\e813'; } /* '' */
 .icon-input-filter:before { content: '\e814'; } /* '' */
 .icon-layers-hide:before { content: '\e815'; } /* '' */
 .icon-layers-show:before { content: '\e816'; } /* '' */
@@ -51,13 +51,13 @@
 .icon-upload-button:before { content: '\e837'; } /* '' */
 .icon-restore-overlay:before { content: '\e838'; } /* '' */
 .icon-export-maps:before { content: '\e839'; } /* '' */
-.icon-pin-point:before { content: '\e83a'; } /* '' */
-.icon-context-first:before { content: '\e83b'; } /* '' */
-.icon-context-angle:before { content: '\e83c'; } /* '' */
-.icon-context-prev:before { content: '\e83d'; } /* '' */
-.icon-context-best:before { content: '\e83e'; } /* '' */
-.icon-context-next:before { content: '\e83f'; } /* '' */
-.icon-context-last:before { content: '\e840'; } /* '' */
+.icon-map-Point:before { content: '\e83a'; } /* '' */
+.icon-context-menu-first:before { content: '\e83b'; } /* '' */
+.icon-context-menu-angle:before { content: '\e83c'; } /* '' */
+.icon-context-menu-prev:before { content: '\e83d'; } /* '' */
+.icon-context-menu-best:before { content: '\e83e'; } /* '' */
+.icon-context-menu-next:before { content: '\e83f'; } /* '' */
+.icon-context-menu-last:before { content: '\e840'; } /* '' */
 .icon-screen-3:before { content: '\e841'; } /* '' */
 .icon-screen-6:before { content: '\e842'; } /* '' */
 .icon-screen-5:before { content: '\e843'; } /* '' */
