--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -123,7 +123,8 @@ div.menu-wrapper {
 
 		button.pin {
 			position: absolute;
-			right: 0;
+			right: 15px;
+			top: 15px;
 			color: white;
 			border: none;
 			background: transparent;
@@ -131,8 +132,6 @@ div.menu-wrapper {
 			outline: none;
 			z-index: @z-index-menu-container-button;
 			font-size: 24px;
-			padding: 10px;
-			margin: 5px 5px;
 			box-sizing: border-box;
 		}
 	}
