--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
@@ -32,7 +32,7 @@
 			}
 		}
 
-		&.set-favorite.active2 i, &.set-preset.active2 i, &.remove-overlay.active2 i {
+		 &.set-preset.active2 i {
 			text-shadow: 0 0 9px yellow;
 			-webkit-text-stroke: 0.2px yellow;
 		}
