--- a/src/app/@ansyn/ansyn/modules/core/components/context-menu/context-menu.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/context-menu/context-menu.component.less
@@ -4,6 +4,7 @@
 
 @context-menu-color: @application-primary-color;
 @context-menu-contrast: white;
+@context-open-menu: black;
 
 :host {
 	outline: none;
@@ -19,7 +20,6 @@
 			visibility: visible;
 			div.buttons-area {
 				.menu-item {
-					font-size: 12px;
 					&:hover:not(:disabled) {
 						span {
 							// color: @background-color-3;
@@ -46,10 +46,10 @@
 				justify-content: center;
 
 				&:hover {
-					// background-color: @context-menu-color;
+					 background-color: @context-menu-color;
 					transform: scale(0.6715);
 					.pointer {
-						// color: @context-menu-contrast;
+						 color: @context-menu-contrast;
 					}
 				}
 
@@ -70,8 +70,8 @@
 
 					&:hover:not(:disabled) {
 						opacity: 0.8;
-						// background-color: @context-menu-contrast;
-						// color: @context-menu-color;
+						 background-color: @context-menu-contrast;
+						 color: @context-menu-color;
 					}
 
 					&.best {
@@ -131,8 +131,8 @@
 			left: 0;
 			z-index: @z-index-context-menu;
 			cursor: pointer;
-			background: #FFFFFF;
-			color: #30A2C6;
+			background: @context-menu-contrast;
+			color: @context-menu-color;
 		}
 
 		div.buttons-area {
@@ -140,7 +140,7 @@
 				position: absolute;
 				border: none;
 				outline: none;
-				color: black;
+				color: @context-open-menu;
 				border-radius: 100%;
 				width: 56px;
 				height: 56px;
@@ -194,7 +194,6 @@
 
 				&:hover {
 					.sub-buttons-list {
-						//transition: visibility ease-out 200ms, z-index ease-out 200ms;
 						z-index: @z-index-context-menu-sub-buttons-list;
 					}
 				}
@@ -223,7 +222,7 @@
 						height: 34px;
 						background: #ffffff;
 						box-shadow: 0 12px 12px rgba(0, 0, 0, 0.237602), 0 0 12px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24), 0 0 6px rgba(0, 0, 0, 0.12);
-						color: black;
+						color: @context-open-menu;
 						margin-right: 5.5px;
 						transition: left, z-index;
 
@@ -238,29 +237,9 @@
 							font-weight: bold;
 						}
 
-						//&:after {
-						//	transform: translateY(-100%);
-						//	opacity: 0;
-						//	position: absolute;
-						//	content: attr(value);
-						//	top: 0;
-						//	left: 0;
-						//	padding: 5px;
-						//	background: black;
-						//	transition: visibility .3s, transform .3s, opacity .3s;
-						//	visibility: hidden;
-						//	white-space: nowrap;
-						//}
-
 						&:hover {
 							opacity: 0.8;
 							z-index: @z-index-context-menu;
-							// background: #0b3e48;
-							//&:after {
-							//	opacity: 1;
-							//	visibility: visible;
-							//	transform: translateY(-150%)
-							//}
 						}
 
 						&:last-child {
