--- a/src/app/@ansyn/ansyn/modules/menu-items/cases/components/edit-case/edit-case.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/cases/components/edit-case/edit-case.component.less
@@ -56,7 +56,7 @@ div.edit-case {
 				border: 0.5px solid rgba(0, 0, 0, 0.1);
 				box-sizing: border-box;
 				box-shadow: 0 1px 1px rgba(0, 0, 0, 0.314764);
-				font-family: 'Lato';
+				font-family: @app-font;
 				font-style: normal;
 				font-weight: normal;
 				font-size: 11px;
