--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-timeline-status/overlay-timeline-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-timeline-status/overlay-timeline-status.component.less
@@ -4,17 +4,16 @@
 
 .overlays-status {
 	position: absolute;
-	top: 15px;
+	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: rgba(red(@application-contrast-color), green(@application-contrast-color), blue(@application-contrast-color), 0.1);
+	background: rgba(red(@background-color-0), green(@background-color-0), blue(@background-color-0), 0.38);
 	color: @background-color-1;
 	font-size: 15px;
-	background: @background-color-0;
 	.text-container {
 		position: relative;
 		top: -10px;
