--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.less
@@ -8,7 +8,7 @@ div.container {
 		padding: 5px 0 10px 0;
 
 		span.title {
-			font-family: 'Lato', sans-serif;
+			font-family: @app-font;
 			font-style: normal;
 			font-weight: bold;
 			font-size: 14px;
@@ -22,7 +22,7 @@ div.container {
 		}
 
 		span.filtered {
-			font-family: 'Lato', sans-serif;
+			font-family: @app-font;
 			font-style: italic;
 			font-weight: normal;
 			font-size: 12px;
