--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -39,7 +39,7 @@ div.container {
 		align-items: baseline;
 
 		span.title {
-			font-family: 'Lato', sans-serif;
+			font-family: @app-font;
 			font-style: normal;
 			font-weight: bold;
 			font-size: 14px;
