--- a/src/app/app/app.component.less
+++ b/src/app/app/app.component.less
@@ -1,9 +1,11 @@
+@import "ansyn/less/globals";
+
 :host {
 	width: 100vw;
 	height: 100vh;
 	display: block;
 	margin: 0;
-	font-family: 'Lato', sans-serif;
+	font-family: @app-font;
 	font-size: 14px;
 	background: url(/assets/background.webp) no-repeat;
 	background-size: cover;
