--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-manager/layers-manager.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-manager/layers-manager.component.less
@@ -26,7 +26,7 @@ div.title-row {
 	padding: 5px 0 10px 0;
 
 	span.title {
-		font-family: 'Lato', sans-serif;
+		font-family: @app-font;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 14px;
