icons and testing

--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -33,7 +33,7 @@
 .icon-quick-loop:before { content: '\e821'; } /* '' */
 .icon-remove-overlay:before { content: '\e822'; } /* '' */
 .icon-main-algorithms:before { content: '\e823'; } /* '' */
-.icon-copy:before { content: '\e824'; } /* '' */
+.icon-copy-coords:before { content: '\e824'; } /* '' */
 .icon-shadow-mouse:before { content: '\e829'; } /* '' */
 .icon-share:before { content: '\e82a'; } /* '' */
 .icon-status-bar-case:before { content: '\e82b'; } /* '' */
