--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-dimension-mode/imagery-dimension-mode.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-dimension-mode/imagery-dimension-mode.component.html
@@ -2,7 +2,7 @@
 	<button class="small-icon-button"
 			(click)="toggleMapDimentions()"
 			tooltip-value="2D / 3D"
-			[attr.tooltip-class]="'bottom right'">
+			[attr.tooltip-class]="'left'">
 			{{ moveToMap }}
 	</button>
 </div>
