--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -37,3 +37,10 @@
 </label>
 
 <button (click)="undeletableAnnotations()">Add undeletable annotation</button>
+<button (click)="collapseAll()">Collapse All</button>
+<button (click)="unCollapseAll()">Un-Collapse All</button>
+<button (click)="insertLayer()">Insert Layer</button>
+<button (click)="removeLayer()">Remove Layer</button>
+<button (click)="showLayer()">Show/Hide Layer</button>
+<button (click)="startDrag()">Start Drag</button>
+<button (click)="stopDrag()">Stop Drag</button>
