--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
@@ -37,6 +37,11 @@
 			-webkit-text-stroke: 0.2px yellow;
 		}
 
+		&.drag-mode.active2 i {
+			text-shadow: 0 0 9px yellow;
+			-webkit-text-stroke: 0.2px yellow;
+		}
+
 		i{
 			&.icon-favorites-active{
 				color: @application-primary-color;
