--- a/src/app/@ansyn/menu/menu/menu.component.html
+++ b/src/app/@ansyn/menu/menu/menu.component.html
@@ -38,7 +38,7 @@
 		<button
 			*ngIf="menuConfig?.isCollapsible"
 			class="hide-menu"
-			(click)="startToggleMenuCollapse()"
+			(click)="toggleCollapse()"
 			[attr.tooltip-value]="'Hide menu' | translate"
 			tooltip-class="right">
 			<i class="fa fa-caret-left" [class.fa-caret-right]="collapse"></i>
