seem to be fixed

--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
@@ -1,7 +1,7 @@
 <div class="buttons">
 
 	<ng-container
-		*ngFor="let component of entryComponents.status">
+		*ngFor="let component of _entryComponents.status">
 		<ng-container
 			*ngIf="component.showFirst && component.prototype.getType() === 'buttons'"
 			[ansynEntryComponent]="{ component: component , mapId: mapId }">
@@ -35,7 +35,7 @@
 	</button>
 
 	<ng-container
-		*ngFor="let component of entryComponents.status">
+		*ngFor="let component of _entryComponents.status">
 		<ng-container
 			*ngIf="!component.showFirst && component.prototype.getType() === 'buttons'"
 			[ansynEntryComponent]="{ component: component , mapId: mapId }">
