same scroll for all app

--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -4,6 +4,7 @@ div.container {
 	background-color: @background-color-2;
 	margin-bottom: 13px;
 	padding: 13px;
+	overflow: hidden;;
 
 	&.Annotation {
 		button.down-arrow {
@@ -15,7 +16,7 @@ div.container {
 				display: flex;
 			}
 			div.actions .show-all {
-				/* display: block; */
+				 display: block;
 			}
 		}
 
