--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -265,3 +265,25 @@ input[type=number]::-webkit-outer-spin-button {
 	font-size: 20px;
 	line-height: normal;
 }
+
+/deep/ .app-scroll::-webkit-scrollbar {
+	 width: 7px;
+ }
+
+/deep/ .app-scroll::-webkit-scrollbar-corner {
+	 background-color: transparent;
+ }
+
+/deep/ .app-scroll::-webkit-scrollbar-button {
+	 width: 0;
+	 height: 0;
+	 display: none;
+ }
+
+/deep/ .app-scroll::-webkit-scrollbar-thumb {
+	 -webkit-box-shadow: inset -1px -1px 0 rgba(0, 0, 0, 0.05), inset 1px 1px 0 rgba(0, 0, 0, 0.05);
+	 border: 4px solid transparent;
+	 background-clip: padding-box;
+	 border-radius: 2px;
+	 background: white -webkit-gradient(linear, 0 0, 0 100%, color-stop(.5, rgba(255, 255, 255, .2)), color-stop(.5, transparent), to(transparent));
+ }
