--- a/src/app/@ansyn/ansyn/modules/menu-items/cases/components/cases-table/cases-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/cases/components/cases-table/cases-table.component.less
@@ -1,4 +1,5 @@
 @import "ansyn/less/z-index-globals";
+@import 'ansyn/less/common';
 
 div.cases-table {
 	width: 100%;
@@ -31,28 +32,6 @@ div.cases-table {
 		display: block;
 		overflow-y: auto;
 		height: 80vh;
-
-		&::-webkit-scrollbar {
-			width: 7px;
-		}
-
-		&::-webkit-scrollbar-corner {
-			background-color: transparent;
-		}
-
-		&::-webkit-scrollbar-button {
-			width: 0;
-			height: 0;
-			display: none;
-		}
-
-		&::-webkit-scrollbar-thumb {
-			-webkit-box-shadow: inset -1px -1px 0 rgba(0, 0, 0, 0.05), inset 1px 1px 0 rgba(0, 0, 0, 0.05);
-			border: 4px solid transparent;
-			background-clip: padding-box;
-			border-radius: 2px;
-			background: white -webkit-gradient(linear, 0 0, 0 100%, color-stop(.5, rgba(255, 255, 255, .2)), color-stop(.5, transparent), to(transparent));
-		}
 
 		div.cases-table-body-row:hover + div.cases-table-body-row hr {
 			display: block;
