add scroll to data-input and tasks

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -27,6 +27,11 @@
 		justify-content: space-between;
 	}
 
+	.tree-view-container{
+		max-height: 300px;
+		overflow-y: auto;
+	}
+
 	div.data-input-filters-buttons {
 		button {
 			background: transparent;
