--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.html
@@ -1,6 +1,6 @@
 <div class="data-input-filter">
 	<div class="tree-view-main">
-		<div>
+		<div class="tree-view-container scrolled">
 			<ngx-treeview [config]="dataInputFiltersConfig" [items]="dataInputFiltersItems"
 						  (selectedChange)="selectedFilters = $event">
 			</ngx-treeview>
