same scroll for all app (#2499)
* same scroll for all app

* one scroll

* add scroll to data-input and tasks

--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filters-collection/filters-collection.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filters-collection/filters-collection.component.html
@@ -14,7 +14,7 @@
 		[label]="'Search' | translate">
 	</ansyn-input>
 
-	<div class="allFilters">
+	<div class="allFilters scrolled">
 		<ng-container *ngIf="filters?.length; else noFiltersFound">
 			<ansyn-filter-container
 				*ngFor="let filter of filters"
