--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.less
@@ -1,4 +1,5 @@
 @import 'ansyn/less/colors';
+@import 'ansyn/less/common';
 
 :host {
 	&.combo-center .combo-container .options-container /deep/ .option {
