--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -6,6 +6,7 @@
 			class="annotaion-combo-box"
 			icon=""
 			direction="top"
+			color="transparent"
 			name="annotations-layer"
 			[ngModel]="activeAnnotationId"
 			[comboBoxToolTipDescription]="'choose annotation layer' | translate"
@@ -16,14 +17,6 @@
 			</ansyn-combo-box-option>
 
 		</ansyn-combo-box>
-		<!--<select class="active-annotation-layer" (change)="setSelectedAnnotationLayer($event.target.value)">
-			<option
-				[selected]="(activeAnnotationLayer$ | async) === layer?.id"
-				[value]="layer?.id"
-				*ngFor="let layer of annotationLayerIds$ | async">{{ layer.name }}
-			</option>
-		</select>
-		<span class="dummy-arrow">▼</span>-->
 	</div>
 </div>
 
