disable line and arrow on none stroke

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -17,7 +17,8 @@
 
 	<li *ngFor="let annotationMode of ANNOTATION_MODE_LIST"
 		[class.mode-on]="mode === annotationMode"
-		(click)="setAnnotationMode(annotationMode)">
+		(click)="setAnnotationMode(annotationMode)"
+		[class.disabled]="!isAnnotationEnable(annotationMode)">
 		<span
 			class="icon-annotation-{{annotationMode.toLowerCase()}}" [attr.tooltip-value]="annotationMode | translate"
 			tooltip-class="bottom">
