--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -91,6 +91,12 @@
 				background-color: @background-color-6;
 			}
 
+			&.disabled{
+				opacity: 0.3;
+				cursor: not-allowed;
+				pointer-events: none;
+			}
+
 			&.spliter {
 				display: flex;
 				align-items: center;
