change hide color

--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -172,7 +172,7 @@ button.hide-menu {
 	transform: translateX(100%);
 	top: calc(~'50% - 110px');
 	height: 60px;
-	background: #2e2d46;
+	background: @background-color-1;
 	border: none;
 	color: white;
 	box-shadow: 2px 0px 4px -2px black;
@@ -181,7 +181,7 @@ button.hide-menu {
 	transition: .5s;
 	z-index: 4000;
 	&:hover {
-		background-color: #27B2CF;
+		background-color: @background-color-3;
 	}
 }
 
