--- a/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.less
+++ b/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.less
@@ -25,7 +25,7 @@ div.status-timeline-container {
 		transform: translateY(calc(~'-100% - @{status-bar-height}'));
 		left: calc(~'50% - 30px');
 		width: 60px;
-		background: #2e2d46;
+		background: @background-color-1;
 		border: none;
 		color: white;
 		box-shadow: 2px 0 4px -2px black;
@@ -35,7 +35,7 @@ div.status-timeline-container {
 		z-index: @z-index-hide-menu-button;
 
 		&:hover {
-			background-color: #27B2CF;
+			background-color: @background-color-3;
 		}
 	}
 
