layer container hide tooltip

--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -16,7 +16,7 @@ div.container {
 				display: flex;
 			}
 			div.actions .show-all {
-				 display: block;
+				/* display: block; */
 			}
 		}
 
