--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-manager/layers-manager.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-manager/layers-manager.component.less
@@ -17,3 +17,16 @@
 		padding-right: 10px;
 	}
 }
+
+div.title-row {
+	padding: 5px 0 10px 0;
+
+	span.title {
+		font-family: @app-font;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 14px;
+		line-height: 100%;
+		color: #FFFFFF;
+	}
+}
